@@ -1,4 +1,4 @@
-# CHECKSUMS file written on Mon Oct  7 08:58:28 2002 by CPAN::Checksums (v1.011)
+# CHECKSUMS file written on Mon Feb  3 15:43:17 2003 by CPAN::Checksums (v1.015)
 $cksum = {
   'RCS' => {
     'isdir' => 1
@@ -15,7 +15,7 @@ $cksum = {
     'size' => '1375'
   },
   '43' => {
-    'mtime' => '2002-10-07',
+    'mtime' => '2003-02-03',
     'md5' => 'f0287f33eba7192e2a9c6a14f829aa1a',
     'size' => '3'
   }
